--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
 		"@types/uuid": "^3.4.6",
 		"lite-server": "^2.5.4",
 		"uuid": "^3.3.3"
+	},
+	"devDependencies": {
+		"ts-loader": "^6.2.1",
+		"typescript": "^3.7.4",
+		"webpack": "^4.41.5",
+		"webpack-cli": "^3.3.10",
+		"webpack-dev-server": "^3.10.1"
 	}
 }
