--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "A project list manager",
 	"main": "app.js",
 	"scripts": {
-		"start": "lite-server"
+		"start": "webpack-dev-server",
+		"build": "webpack --config webpack.config.prod.js"
 	},
 	"repository": {
 		"type": "git",
@@ -22,6 +23,7 @@
 		"uuid": "^3.3.3"
 	},
 	"devDependencies": {
+		"clean-webpack-plugin": "^3.0.0",
 		"ts-loader": "^6.2.1",
 		"typescript": "^3.7.4",
 		"webpack": "^4.41.5",
