--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "A project list manager",
 	"main": "app.js",
 	"scripts": {
-		"start": "webpack-dev-server",
+		"dev": "webpack-dev-server",
+		"start": "webpack",
 		"build": "webpack --config webpack.config.prod.js"
 	},
 	"repository": {
